<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">Beddit Alarm</string>

    <string name="settings_button_title">Settings</string>
    <string name="help_button_title">Help</string>

    <string name="toast_alarmset">Alarm set</string>
    <string name="toast_alarmremoved">Alarm removed</string>
    <string name="toast_alarmupdated">Alarm updated</string>

       <string name="main_act_set_alarm_button">Set Alarm</string>
    <string name="main_act_delete_alarm_button">Unset Alarm</string>

    <string name="mainActivity_tokenExpiredDialog_text">Beddit connection expired. Reconnect to Beddit?</string>
    <string name="mainActivity_tokenExpiredDialog_no">No</string>
    <string name="mainActivity_tokenExpiredDialog_yes">Yes</string>

    <string name="pref_title_beddit_settings">Connection to your Beddit account</string>
    <string name="pref_title_forget">Disconnect from Beddit</string>
    <string name="pref_logged_in_as">You are connected to Beddit as</string>
    <string name="pref_not_logged_in">You are not connected</string>


    <string name="pref_title_other_settings">Other settings</string>

    <string name="pref_title_awesome">Make this app awesome</string>
    <string name="pref_toggle_info_summary">Show summary of sleep data on wake up</string>
    <string name="pref_summary_awesome">This setting is completely useless.</string>

    <string name="pref_title_alarm_settings">Alarm settings</string>
    <string name="pref_title_snooze_length">Snooze time length</string>
    <string name="pref_summary_snooze_length">Snooze time is set to</string>

    <string name="alarmActivity_dismiss">Dismiss</string>
    <string name="alarmActivity_snooze">Snooze</string>
    <string name="alarmActivity_title">Alarm</string>


    <string name="help_text_1">Set alarm time by turning the clock pointers and use the interval slider
        to set the earliest time you would like to wake up.
    </string>
    <string name="help_text_2">This app will try to wake you up on that timespan while you are at
        a light sleep stage.
    </string>
    <string name="help_text_3">Finally press \'add alarm\' to set the alarm.</string>
    <string name="help_text_4">You can unset the alarm by pressing \'delete alarm\'.</string>

    <string name="main_act_interval_title">Wake up interval</string>
    <string name="help_title">Instructions</string>
    <string name="pref_title_graphics">Graphics settings</string>
    <string name="pref_title_colour_theme">Colour theme</string>
    <string name="pref_summary_colour_theme">Colour theme is set to</string>
    <string name="pref_title_advanced">Advanced options</string>
    <string name="notification_text">Alarm set at</string>
    <string name="pref_title_user_index">Choose user</string>

    <string name="pref_alarm_length">Alarm length</string>
    <string name="pref_summary_alarm_length">The alarm will play and vibrate for</string>
    <string name="pref_summary_sleep_stage"></string>


    <string name="loading_dialog_text">Connecting, please wait...</string>
    <string name="pref_title_wake_up_sleep_stage">Sleep stage to wake up</string>
    <string name="sleep_info_title">Sleep Info</string>
    <string name="sleep_info_well_button">Feeling good</string>
    <string name="sleep_info_overall_age_pref">Data is</string>
    <string name="sleep_info_overall_age_post">old</string>
    <string name="sleep_info_up_to_date">Data is up to date</string>
    <string name="sleep_info_overall_total">-- --</string>
    <string name="sleep_info_overall_minitotal">Total amount of sleep</string>
    <string name="sleep_info_deep_total">-- --</string>
    <string name="sleep_info_deep_minitotal">Total amount of quiet sleep</string>
    <string name="sleep_info_badly_button">I\'m tired</string>
    <string name="sleep_info_overall_title">Last night</string>
    <string name="sleep_info_delay">-- --</string>

    <string name="disconnect_dialog_message">Alarm will be unset if you choose to disconnect. Disconnect anyway?
    </string>
    <string name="button_text_close">Close</string>
    <string name="login_or_authorisation_failed">Login or authorisation failed.</string>
    <string name="must_connect_to_beddit_account">This app can not be used without connecting to your beddit account
    </string>
    <string name="button_text_ok">OK</string>
    <string name="sleep_data_fail">Could not get sleep data from beddit</string>
    <string name="could_not_connect">Could not connect to beddit</string>
    <string name="no_beddit_data">No sleep data available for last night</string>
    <string name="dialog_text_no_sleep_data">There is no sleep data available</string>
    <string name="dialog_text_unknown_error">Unknown error</string>
    <string name="sleep_diary_link">Open sleep diary in browser</string>

    <style name="ButtonText">
        <item name="android:textColor">#ffffff</item>
        <item name="android:textStyle">bold</item>
        <item name="android:shadowColor">#000000</item>
        <item name="android:shadowDx">1</item>
        <item name="android:shadowDy">1</item>
        <item name="android:shadowRadius">2</item>
    </style>
</resources>


