<?xml version="1.0" encoding="utf-8"?>

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:layout_width="fill_parent"
              android:layout_height="fill_parent"
              android:orientation="vertical">
        <TextView android:id="@+id/help_text_title"
                  android:layout_width="wrap_content"
                  android:layout_height="wrap_content"
                  android:text="@string/help_title"
                  android:textSize="22dp"
                  android:padding="10dp"
                  android:textStyle="bold"
                  android:layout_centerHorizontal="true"/>
        <TextView android:id="@+id/helptext1"
                  android:layout_width="fill_parent"
                  android:layout_height="wrap_content"
                  android:layout_below="@id/help_text_title"
                  android:padding="5dp"
                  android:text="@string/help_text_1"/>
        <TextView android:id="@+id/helptext2"
                  android:layout_width="fill_parent"
                  android:layout_height="wrap_content"
                  android:layout_below="@id/helptext1"
                  android:padding="5dp"
                  android:text="@string/help_text_2" />
        <TextView android:id="@+id/helptext3"
                  android:layout_width="fill_parent"
                  android:layout_height="wrap_content"
                  android:layout_below="@id/helptext2"
                  android:padding="5dp"
                  android:text="@string/help_text_3" />
        <TextView android:id="@+id/helptext4"
                  android:layout_width="fill_parent"
                  android:layout_height="wrap_content"
                  android:layout_below="@id/helptext3"
                  android:padding="5dp"
                  android:text="@string/help_text_4" />
</LinearLayout>