<?xml version="1.0" encoding="utf-8"?>

<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
                android:orientation="vertical"
                android:layout_width="fill_parent"
                android:layout_height="fill_parent">

    <TextView android:id="@+id/sleep_info_overall_text"
              android:layout_width="wrap_content"
              android:layout_height="wrap_content"
              android:text="@string/sleep_info_overall_total"
              android:textSize="22dp"
              android:padding="10dp"
              android:textStyle="bold"
              android:layout_centerHorizontal="true"/>

    <TextView android:id="@+id/sleep_info_deep_text"
              android:layout_width="wrap_content"
              android:layout_height="wrap_content"
              android:text="@string/sleep_info_deep_total"
              android:textSize="22dp"
              android:padding="10dp"
              android:textStyle="bold"
              android:layout_below="@+id/sleep_info_overall_text"
              android:layout_centerHorizontal="true"/>
    <Button
            android:id="@+id/SleptWellButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/sleep_info_well_button"
            android:layout_centerHorizontal="true"
            android:layout_below="@+id/sleep_info_deep_text"
            />
    <Button
            android:id="@+id/SleptBadlyButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/sleep_info_badly_button"
            android:layout_below="@+id/SleptWellButton"
            android:layout_centerHorizontal="true"
            />
</RelativeLayout>
