<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res/ohtu.beddit"
    android:id="@+id/mainLayout"
    android:orientation="vertical"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    >
    <ohtu.beddit.views.timepicker.CustomTimePicker
            android:id="@+id/alarmTimePicker"
            android:layout_width="fill_parent"
            android:layout_height="0dip"
            android:layout_weight="1"
            app:minSize="200"
            />
    <RelativeLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:paddingBottom="10dp"
            android:paddingTop="0dp">
        <TextView
                android:id="@+id/interval_title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingTop="0dp"
                android:text="@string/main_act_interval_title"
                android:layout_centerHorizontal="true"
                android:layout_alignParentTop="true"
                android:textColor="#000000"/>
    </RelativeLayout>


    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
                  xmlns:app="http://schemas.android.com/apk/res/com.example"
                  android:orientation="horizontal"
                  android:layout_width="fill_parent"
                  android:layout_height="wrap_content"
            >
        <Button
                android:id="@+id/setAlarmButton"
                android:layout_width="0dip"
                android:layout_weight="1"
                android:layout_height="wrap_content"
                android:text="@string/main_act_set_alarm_button"
                />
        <Button
                android:id="@+id/deleteAlarmButton"
                android:layout_width="0dip"
                android:layout_weight="1"
                android:layout_height="wrap_content"
                android:text="@string/main_act_delete_alarm_button"
                />
    </LinearLayout>
</LinearLayout>

